<resources>
    <string name="app_name">Star Games App</string>
    <string name="main_daily_entries">Daily ticket usage: %d/%d</string>
    <string name="special_daily_entries">Daily ticket usage: 0/10</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="create_a_password">Create a password</string>
    <string name="re_enter_password">Re-enter your password</string>
    <string name="create_account">Create Account</string>
    <string name="create_conta_big">CREATE ACCOUNT</string>
    <string name="i_already_have_account">I Already Have An Account</string>
    <string name="login_big">LOG IN TO THE ACCOUNT</string>
    <string name="login">Log In To The Account</string>
    <string name="i_dont_have_account">I Don\'t Have An Account</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="provide_your_name">Provide your name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="save">Save</string>
    <string name="games">GAMES</string>
    <string name="main_games">MAIN GAMES</string>
    <string name="special_games">SPECIAL GAMES</string>
    <string name="access">ACCESS</string>
    <string name="daily_collection">Daily\nCollection</string>
    <string name="daily_collection_big">DAILY COLLECTION</string>
    <string name="daily_event_desc">Reach the points goal to receive valuable items!</string>
    <string name="points_big">POINTS: %1$d</string>
    <string name="missions_big">MISSIONS</string>
    <string name="collect_250_stars">Collect %d Stars</string>
    <string name="receive">RECEIVE</string>
    <string name="incomplete">INCOMPLETE</string>
    <string name="use_50_tickets">Use %d Tickets</string>
    <string name="enter_the_app">Enter the app</string>
    <string name="memory_game">MEMORY GAME</string>
    <string name="memory_game_desc">Match the figures using your\nvisual memory.</string>
    <string name="seconds_remaining">Seconds remaining: %1$d</string>
    <string name="phase">Phase: %s</string>
    <string name="rewards_big">REWARD(S)</string>
    <string name="prizes_big">PRIZE(S)</string>
    <string name="collected">COLLECTED</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="change_email_textview_desc">If you would like to change the email address you created an account with in the app, you can do so by entering a new email address below.</string>
    <string name="change_e_mail">Change E-mail</string>
    <string name="for_security_reasons_enter_your_pass">For security reasons, please enter your password to confirm your identity.</string>
    <string name="enter_the_new_e_mail">Enter the new e-mail</string>
    <string name="big_change_email">CHANGE E-MAIL</string>
    <string name="verify">VERIFY</string>
    <string name="successful_verification">Successful verification!</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="email_successfully_updated">Email successfully updated!</string>
    <string name="you_need_an_account_to_use_the_app">You need an account to use the app.</string>
    <string name="recent_authentication_required">Recent authentication required.</string>
    <string name="invalid_credentials">Invalid credentials. Check your email and password and try again.</string>
    <string name="the_email_provided_is_already_in_use">The email provided is already associated with another account. Please try with another email.</string>
    <string name="unknown_error_try_contacting_support">Unknown error. Try contacting support.</string>
    <string name="too_many_requests_in_a_short_period_of_time">Too many requests in a short period of time!</string>
    <string name="check_your_internet_connection">Check your internet connection!</string>
    <string name="error_">Error: %s</string>
    <string name="user_not_found">User not found</string>
    <string name="help_and_support">Help and support</string>
    <string name="configurations">CONFIGURATIONS</string>
    <string name="manage_account">Manage account</string>
    <string name="small_configurations">Configurations</string>
    <string name="privacy_policy">Privacy \nPolicy</string>
    <string name="terms_of_use">Terms of\nUse</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="enter_an_email_address_to_which_we_will_nsend_you_a_reset_link_password">Enter an email address to which we will  send you a reset link password.</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="small_forgot_your_password">Forgot your password?</string>
    <string name="please_try_again_in_a_few_seconds">Please, try again in a few seconds!</string>
    <string name="exchange_stars">Exchange Stars</string>
    <string name="big_save">SAVE</string>
    <string name="define_pix_key">DEFINE PIX KEY</string>
    <string name="set_a_pix_key_for_us_to_send_you_the_money_to_your_bank_account">Set a PIX key for us to send you the money to your bank account</string>
    <string name="enter_your_pix_key">Enter your PIX key</string>
    <string name="define_an_email">DEFINE AN EMAIL</string>
    <string name="set_an_email_to_which_we_will_send_your_digital_gift_card_code">Set an email to which we will send your digital gift card code</string>
    <string name="enter_an_email">Enter an email</string>
    <string name="remaining_time">Remaining time: %1$d minute(s) : %2$d second(s)</string>
    <string name="remaining_time_seconds">Remaining time: %1$d second(s)</string>
    <string name="on_cooldown">On cooldown</string>
    <string name="touch_again_to_close_the_app">Touch again to close the app</string>
    <string name="click_again_to_give_up">Click again to give up</string>
    <string name="cancel">CANCEL</string>
    <string name="okay">OKAY</string>
    <string name="when_accessing_the_game_without_nusing_tickets_you_will_not_receive_nstars_do_you_want_to_nplay_anyway">When accessing the game without  using tickets, you will not receive  Stars. Do you want to  play anyway?</string>
    <string name="access_without_ticket">Access without Ticket</string>
    <string name="button_cancel_action" translatable="false">Button cancel action</string>
    <string name="play">PLAY</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="to_access_this_area_you_must_be_vip_1_or_above">To access this area, you must be VIP 1 or above.</string>
    <string name="vip_benefits">VIP BENEFITS %d</string>
    <string name="star_gain">Star Gain</string>
    <string name="star_gain_percentage" translatable="false">+%d%%</string>
    <string name="shadow_game">SHADOW GAME</string>
    <string name="errors">Errors: %d/5</string>
    <string name="you_lose_the_game">YOU LOSE THE GAME!</string>
    <string name="show_division_math_operation" translatable="false">%d ÷ %d = ?</string>
    <string name="show_addiction_math_operation" translatable="false">%d + %d = ?</string>
    <string name="show_multiplication_math_operation" translatable="false">%d x %d = ?</string>
    <string name="show_subtraction_math_operation" translatable="false">%d ÷ %d = ?</string>
    <string name="what_is_the_capital_of_france">What is the capital of France?</string>
    <string name="paris">Paris</string>
    <string name="london">London</string>
    <string name="rome">Rome</string>
    <string name="madrid">Madrid</string>
    <string name="who_painted_the_mona_lisa">Who painted the \"Mona Lisa\"?</string>
    <string name="vincent_van_gogh">Vincent Van Gogh</string>
    <string name="leonardo_da_vinci">Leonardo da Vinci</string>
    <string name="pablo_picasso">Pablo Picasso</string>
    <string name="michelangelo">Michelangelo</string>
    <string name="venus">Venus</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="what_is_the_primary_color">What is the primary color?</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
</resources>