<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_black"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/provide_your_name"
        android:textColor="#C9D3F0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt" />


    <EditText
        android:id="@+id/first_name"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:inputType="textPersonName"
        android:background="@drawable/custom_edittext"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/enter_your_first_name"
        android:padding="8dp"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:autofillHints="" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:autofillHints="" />


    <LinearLayout
        android:id="@+id/save_changes_btn"
        android:layout_width="288dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/new_button_design"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name">

        <TextView
            android:id="@+id/save_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_extrabold"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>