<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_black"
        android:gravity="center"
        android:text="@string/create_conta_big"
        android:textSize="32sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:scaleX="0.95"
        android:scaleY="0.95"
        android:id="@+id/email_field"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_edittext"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/enter_your_email"
        android:padding="8dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@.!#$%'*+-/=?^_`{|}~"
        android:autofillHints="" />

    <EditText
        android:scaleX="0.95"
        android:scaleY="0.95"
        android:id="@+id/pass_field"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/create_a_password"
        android:padding="8dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!#$%'*+-/=?^_`{|}~"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittext"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!#$%'*+-/=?^_`{|}~"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:scaleX="0.95"
        android:scaleY="0.95"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_field" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_show_hide_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:button="@drawable/custom_checkbox"
        android:padding="8dp"
        android:text="Mostrar Senha"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/confirm_pass"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass" />

    <LinearLayout
        android:id="@+id/register_btn"
        android:layout_width="288dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/new_button_design"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_show_hide_pass">

        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_btn"
        android:layout_width="288dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/disabled_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn">

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center"
            android:text="@string/i_already_have_account"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>