<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAccountEmailActivity"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/gradient_toolbar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/big_back_btn" />

        <TextView
            android:id="@+id/activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/inter_black"
            android:text="@string/change_e_mail"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/for_security_reasons_enter_your_pass"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:visibility="invisible"
        android:id="@+id/new_user_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:scaleX="0.95"
        android:scaleY="0.95"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/editTextColor"
        android:hint="@string/enter_the_new_e_mail"
        android:textColorHint="@color/hintColor"
        android:fontFamily="@font/inter_medium"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_edittext"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_editor_absoluteX="24dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@.!#$%'*+-/=?^_`{|}~"
        android:autofillHints="emailAddress" />

    <ImageView
        android:visibility="invisible"
        android:id="@+id/update_email_btn"
        android:layout_width="288dp"
        android:layout_height="72dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:layout_marginTop="48dp"
        android:src="@drawable/manage_account_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_user_email" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/change_email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/big_change_email"
        android:textColor="#656565"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/update_email_btn"
        app:layout_constraintEnd_toEndOf="@+id/update_email_btn"
        app:layout_constraintStart_toStartOf="@+id/update_email_btn"
        app:layout_constraintTop_toTopOf="@+id/update_email_btn" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:scaleX="0.95"
        android:scaleY="0.95"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/editTextColor"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColorHint="@color/hintColor"
        android:fontFamily="@font/inter_medium"
        android:background="@drawable/custom_edittext"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_editor_absoluteX="24dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!#$%'*+-/=?^_`{|}~"
        android:autofillHints="password" />

    <ImageView
        android:id="@+id/check_credentials_btn"
        android:layout_width="288dp"
        android:layout_height="72dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:layout_marginTop="48dp"
        android:src="@drawable/manage_account_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_user_email" />

    <TextView
        android:id="@+id/check_credentials_btn_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/verify"
        android:textColor="#656565"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/update_email_btn"
        app:layout_constraintEnd_toEndOf="@+id/update_email_btn"
        app:layout_constraintStart_toStartOf="@+id/update_email_btn"
        app:layout_constraintTop_toTopOf="@+id/update_email_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>